# minecrab

./: Cargo.toml  README.md  build.rs  run.sh  verify_shaders.sh
.github/workflows/: rust.yml
minecrab_derive/: Cargo.toml
minecrab_derive/src/: lib.rs
src/: audio.rs  ecs.rs  fixed_point.rs  main.rs  main.rs.old  nibble_slice.rs  physics.rs  trallocator.rs  varint.rs  world.rs
src/net/: codec.rs  connection.rs  mod.rs  packet_helpers.rs  packets.rs  types.rs  wrapper.rs
src/net/decoders/: mod.rs  play.rs
src/net/versions/: mod.rs  v1_10.rs  v1_11.rs  v1_12.rs  v1_12_1.rs  v1_12_2.rs  v1_7_10.rs  v1_7_6.rs  v1_8.rs  v1_9.rs  v1_9_2.rs  v1_9_4.rs
src/render/: blockdata.md  chunk.rs  chunk_debug.rs  chunk_mesher.rs  chunk_mesher.rs.bak  debug_cube.rs  fog.rs  mod.rs  shader.wgsl  texture.rs  util.rs
src/shaders/: chunk.fs.spv  chunk.hlsl  chunk.vs.spv  debug_cube.fs.spv  debug_cube.hlsl  debug_cube.vs.spv  debug_lines.fs.spv  debug_lines.hlsl  debug_lines.vs.spv  shader_trash.wgsl
src/shaders/include/: colormap.hlsl
src/shaders/post/: fog.fs.spv  fog.hlsl  fog.vs.spv  fxaa.fs.spv  fxaa.hlsl  fxaa.vs.spv
